kubernetes/infrastructure/roundcube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: roundcube
  labels:
    app.kubernetes.io/name: roundcube
